# chess_alter_ego

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  Dockerfile  Dockerfile.lichess-bot  Dockerfile.lichess-bot.dockerignore  README.md  environment.yml  install.md  new_implementation.md  pyproject.toml
configs/: restible.yaml  restible_elo2000.yaml
data/models/full/: best.pt
openspec/changes/archive/2026-03-15-reimplement-restible-bot-with-maia2/specs/restible-maia2-bot/: spec.md
openspec/changes/reimplement-restible-bot-with-maia2/: proposal.md  tasks.md
openspec/changes/reimplement-restible-bot-with-maia2/specs/restible-maia2-bot/: spec.md
openspec/specs/restible-maia2-bot/: spec.md
src/restible_bot/: __init__.py  api.py  bot_config.py  cli.py  config.py  dataset.py  evaluate.py  http_bot_config.py  http_uci_engine.py  inference.py  lichess_export.py  maia2_model.py  train.py  uci_engine.py  utils.py
